# yoloPHP

./: .gitignore  CMakeLists.txt  README.md
include/: yolov8.h
model/: modelExport.py
notebooks/: outputs.ipynb  postprocessing.ipynb
notebooks/.ipynb_checkpoints/: outputs-checkpoint.ipynb
phpServer/public/: index.php
preprocessingLib/: CMakeLists.txt
preprocessingLib/cmake/: preprocessingLibConfig.cmake
preprocessingLib/include/: preprocessingLib.h
preprocessingLib/src/: preprocessing.cpp
public/: index.php
src/: CMakeLists.txt  yolov8.cpp
yoloLib/: CMakeLists.txt
yoloLib/include/: yolov8.h
yoloLib/src/: yolov8.cpp
